# denotarius-api

./: .env.dev  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  blockfrost.toml  database.db  default.nix  deno.json  denotarius.db  main  package.json  shell.nix  tsconfig.json  vitest.config.ts  yarn-project.nix
.do/: app.yaml
.github/workflows/: CI.yaml  ci.yaml  deploy.yaml  docker.yml
.yarn/plugins/: yarn-plugin-nixify.cjs
config/: dev-mainnet.json  dev-testnet.json  development.ts  test.json
src/: app.ts  blockfrost.rs  blockfrost_api.rs  constants.ts  database.ts  main.rs  server.ts  types.ts  utils.rs  utils.ts
src/libs/: blockfrost.ts  lucid.ts
src/routes/: attestation-submit.ts  attestation.ts  attestation_submit.ts  common.ts  root.ts  status.ts
src/schemas/: attestation.schema.ts
src/services/: blockfrost.ts  database.ts
src/services/attestation/: index.ts
src/services/test/: first.ts
src/tasks/: check-batches.ts  check_batches.ts
src/tx-builder/: compose-metadata.ts  compose-tx.ts  mnemonic.ts  sign-tx.ts
src/types/: common.ts  routes.ts  tables.ts
src/utils/: common.ts  error-handler.ts  files.ts  index.ts  keys.ts  routes.ts  tx.ts
src/utils/__fixtures__/: keys.ts  routes.fixtures.ts
src/utils/__tests__/: keys.test.ts  routes.test.ts
