[package]
name = "denotarius-api"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version=  "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.137"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
warp = "0.3"
blockfrost = "0.2.0"