[package]
name = "denotarius-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.9", features = ["multipart"] }
blockfrost = "0.2.0"
bytes = "1.0"
dotenvy = { version = "0.15.1" }
futures = { version = "0.3", default-features = false }
serde = {version = "1.0.137"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
tower-http = { version = "0.1", features = ["full"] }
