[package]
name = "denotarius-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.9", features = ["multipart"] }
blockfrost = "0.2.0"
sha2 = "0.10.2"
serde = {version = "1.0.137"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
tower-http = { version = "0.1", features = ["full"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
axum-sqlite = { version = "0.1.0" }
chrono = { version = "0.4.19" }